@@ -1,3 +1,8 @@
+2014-11-20  Igor Zamyatin  <igor.zamyatin@intel.com>
+
+	PR sanitizer/63845
+	* gcc.dg/asan/pr63845.c: New test.
+
 2014-11-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
 	PR sanitizer/63939
